# matmul-kt

./: README.md
backend/: CMakeLists.txt
backend/include/: matrix.h  matrix_jni.h
backend/src/: matrix.cpp  matrix_jni.cpp
